--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_teste">
+    package="com.notes">
    <application
-        android:label="flutter_teste"
+        android:label="notes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
